Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/BD_Extended_Warranty_Coverage__c.object-meta.xml
<CustomObject>
    <label>Extended Warranty Coverage</label>
    <nameField>
        <displayFormat>EWC-{00000000}</displayFormat>
        <label>Extended Warranty Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Warranty Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>