Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Covered_Part__c.field-meta.xml
<CustomField>
    <fullName>BD_Covered_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covered Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Extended Warranty Coverages</relationshipLabel>
    <relationshipName>Extended_Warranty_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>