Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Covered_Until__c.field-meta.xml
<CustomField>
    <fullName>BD_Covered_Until__c</fullName>
    <label>Covered Until</label>
    <type>Date</type>
</CustomField>