Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Create_Warranty_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>BD_Create_Warranty_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Warranty Work Order</label>
    <type>Checkbox</type>
</CustomField>