Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Extended_Warranty_Description__c.field-meta.xml
<CustomField>
    <fullName>BD_Extended_Warranty_Description__c</fullName>
    <formula>&quot;Extended Warranty for: &quot; &amp; BD_Covered_Part__r.Name &amp; &quot; [&quot; &amp; BD_Covered_Part__r.Partnum__c &amp; &quot;] until &quot; &amp; TEXT(BD_Covered_Until__c) &amp; &quot; using coverage from Contract Item: &quot; &amp;  BD_Warranty_Contract_Item__r.Name</formula>
    <label>Extended Warranty Description</label>
    <type>Text</type>
</CustomField>