Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>BD_Parent_Work_Order__c</fullName>
    <label>Parent Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Extended Warranty Coverages</relationshipLabel>
    <relationshipName>Extended_Warranty_Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>