Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Warranty_Contract__c.field-meta.xml
<CustomField>
    <fullName>BD_Warranty_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Contract</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Extended Warranty Coverages</relationshipLabel>
    <relationshipName>Extended_Warranty_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>