Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Warranty_Contract_Item__c.field-meta.xml
<CustomField>
    <fullName>BD_Warranty_Contract_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Contract Item</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Extended Warranty Coverages (Warranty Contract Item)</relationshipLabel>
    <relationshipName>Extended_Warranty_Coverages1</relationshipName>
    <type>Lookup</type>
</CustomField>