Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Coverage__c/fields/BD_Warranty_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>BD_Warranty_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Extended Warranty Coverages (Warranty Work Order)</relationshipLabel>
    <relationshipName>Extended_Warranty_Coverages1</relationshipName>
    <type>Lookup</type>
</CustomField>